--- a/package.json
+++ b/package.json
@@ -12,5 +12,6 @@
 		"url": "https://idontknow/todo.git"
 	},
 	"author": "Aaron Elliott",
-	"description": "A project that does something awesome" 
+	"description": "A project that does something awesome",
+	"keywords": ["freecodecamp"]
 }
