Added a version to the package.json

--- a/package.json
+++ b/package.json
@@ -14,5 +14,6 @@
 	"author": "Aaron Elliott",
 	"description": "A project that does something awesome",
 	"keywords": ["freecodecamp"],
-	"license": "MIT"
+	"license": "MIT",
+	"version": "3.14"
 }
